Update test - not working

--- a/Development.ipynb
+++ b/Development.ipynb
@@ -601,7 +601,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 114,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['5aa59d3d5005741b7de9aa51']"
+      ]
+     },
+     "execution_count": 114,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s_data._device_types"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 115,
    "metadata": {},
    "outputs": [
     {
@@ -610,33 +630,13 @@
        "['4D30A7']"
       ]
      },
-     "execution_count": 108,
+     "execution_count": 115,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "s_data.devices"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 109,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'4D30A7'"
-      ]
-     },
-     "execution_count": 109,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "s_data._devices[0]"
    ]
   },
   {
